fix auto scrolling when focus input on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
 body {
   width: 100%;
   height: 100vh;
-  min-height: -webkit-fill-available;
   background: url(../img/bg.webp) no-repeat;
   background-size: cover;
   display: flex;
@@ -18,9 +17,6 @@ body {
   justify-content: center;
 }
 
-html {
-  height: -webkit-fill-available;
-}
 
 .container {
   box-shadow: 0 0 7px 1px #f0d3ae;
